config/blog/blog-api/delivery.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: blog-api
  annotations:
    ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
    ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
    kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
  labels:
    apis.apps.tanzu.vmware.com/register-api: "true"
    app.kubernetes.io/part-of: blog-api
    apps.tanzu.vmware.com/has-tests: "true"
    apps.tanzu.vmware.com/workload-type: web
    app.kubernetes.io/component: run
    carto.run/workload-name: blog-api
spec:
  template:
    metadata:
      annotations:
        apps.tanzu.vmware.com/correlationid: https://github.com/categolj/blog-api?sub_path=/
        autoscaling.knative.dev/maxScale: "2"
        autoscaling.knative.dev/minScale: "1"
        boot.spring.io/actuator: http://:8081/actuator
        boot.spring.io/version: 3.3.1
        conventions.carto.run/applied-conventions: |-
          inspect-image-convention/buildpacks
          inspect-image-convention/base-image
          inspect-image-convention/run-image
          inspect-image-convention/source
          spring-boot-convention/auto-configure-actuators-check
          spring-boot-convention/is-native-app-check
          spring-boot-convention/is-prometheus-enabled-check
          spring-boot-convention/spring-boot
          spring-boot-convention/spring-boot-graceful-shutdown
          spring-boot-convention/spring-boot-web
          spring-boot-convention/spring-boot-actuator
          spring-boot-convention/spring-boot-prometheus-enabled
          spring-boot-convention/spring-boot-actuator-probes
          spring-boot-convention/app-live-view-appflavour-check
          spring-boot-convention/app-live-view-connector-boot
          spring-boot-convention/app-live-view-appflavours-boot
          spring-boot-convention/service-intent-postgres
        developer.conventions/target-containers: workload
        inspect-image.buildpacks.io/base-image: |-
          reference: registry.tanzu.vmware.com/build-service-dependency-updater/package-repo@sha256:b443aeedf2efe93f03062fd8d30a04b23acbe76f782238be3302487742366568
          top_layer: sha256:0b1edee84e9934ebd277a51b5b2aee4d9140e584d5b629de5840d6911039bce3
        inspect-image.buildpacks.io/buildpacks: |-
          - id: tanzu-buildpacks/ca-certificates
            version: 3.9.0
          - id: tanzu-buildpacks/bellsoft-liberica
            version: 9.15.0
          - id: paketo-buildpacks/syft
            version: 1.10.1
          - id: tanzu-buildpacks/maven
            version: 6.18.0
          - id: tanzu-buildpacks/executable-jar
            version: 6.11.0
          - id: tanzu-buildpacks/apache-tomcat
            version: 7.17.0
          - id: tanzu-buildpacks/apache-tomee
            version: 1.10.0
          - id: tanzu-buildpacks/liberty
            version: 3.10.1
          - id: tanzu-buildpacks/dist-zip
            version: 5.9.0
          - id: tanzu-buildpacks/spring-boot
            version: 5.30.0
          - id: tanzu-buildpacks/jattach
            version: 1.7.0
          - id: tanzu-buildpacks/image-labels
            version: 4.8.0
        inspect-image.buildpacks.io/run-image: registry.tanzu.vmware.com/build-service-dependency-updater/package-repo@sha256:b443aeedf2efe93f03062fd8d30a04b23acbe76f782238be3302487742366568
        inspect-image.opencontainers.org/source: main@sha1:cd3d13739f546d08704f4dbaf0001c7e714b7ab9
        kapp.k14s.io/disable-original: ""
        kapp.k14s.io/identity: v1;blog/carto.run/Workload/blog-api;carto.run/v1alpha1
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
        services.conventions.carto.run/postgres: postgresql/42.7.3
      labels:
        apis.apps.tanzu.vmware.com/register-api: "true"
        app.kubernetes.io/component: run
        app.kubernetes.io/part-of: blog-api
        apps.tanzu.vmware.com/auto-configure-actuators: "true"
        apps.tanzu.vmware.com/has-tests: "true"
        apps.tanzu.vmware.com/workload-type: web
        carto.run/workload-name: blog-api
        conventions.carto.run/framework: spring-boot
        services.conventions.carto.run/postgres: workload
        tanzu.app.live.view: "true"
        tanzu.app.live.view.application.actuator.path: actuator
        tanzu.app.live.view.application.actuator.port: "8081"
        tanzu.app.live.view.application.flavours: spring-boot
        tanzu.app.live.view.application.name: blog-api
    spec:
      containers:
      - env:
        - name: JAVA_TOOL_OPTIONS
          value: -XX:ActiveProcessorCount=2 -XX:ReservedCodeCacheSize=32M -Xss512k -Dfile.encoding="UTF-8" -Dmanagement.endpoint.health.probes.add-additional-paths="true" -Dmanagement.endpoint.health.show-details="always" -Dmanagement.endpoints.web.base-path="/actuator" -Dmanagement.endpoints.web.exposure.include="*" -Dmanagement.health.probes.enabled="true" -Dmanagement.server.port="8081" -Dserver.port="8080" -Dserver.shutdown.grace-period="24s" -Duser.country="JP" -Duser.language="ja" -Duser.t [...]
        - name: BPL_JVM_THREAD_COUNT
          value: "28"
        - name: SPRING_APPLICATION_NAME
          valueFrom:
            secretKeyRef:
              key: otel-trace-service-name
              name: otel-config
        - name: OTEL_SERVICE_NAME
          value: blog-api
        - name: SPRING_SECURITY_USER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: admin-password
              name: blog-config
        - name: BLOG_TENANT_USERS_0
          valueFrom:
            secretKeyRef:
              key: users-0
              name: blog-config
        - name: BLOG_TENANT_USERS_1
          valueFrom:
            secretKeyRef:
              key: users-1
              name: blog-config
        - name: BLOG_TENANT_USERS_2
          valueFrom:
            secretKeyRef:
              key: users-2
              name: blog-config
        - name: BLOG_GITHUB_CONTENTOWNER
          value: making
        - name: BLOG_GITHUB_CONTENTREPO
          value: blog.ik.am
        - name: BLOG_GITHUB_ACCESSTOKEN
          valueFrom:
            secretKeyRef:
              key: github-access-token
              name: blog-config
        - name: BLOG_GITHUB_WEBHOOKSECRET
          valueFrom:
            secretKeyRef:
              key: github-webhook-secret
              name: blog-config
        - name: BLOG_GITHUB_TENANTS_EN_CONTENTOWNER
          value: making
        - name: BLOG_GITHUB_TENANTS_EN_CONTENTREPO
          value: ik.am_en
        - name: BLOG_GITHUB_TENANTS_EN_ACCESSTOKEN
          valueFrom:
            secretKeyRef:
              key: github-access-token-en
              name: blog-config
        - name: BLOG_GITHUB_TENANTS_EN_WEBHOOKSECRET
          valueFrom:
            secretKeyRef:
              key: github-webhook-secret-en
              name: blog-config
        - name: MANAGEMENT_OTLP_LOGS_ENDPOINT
          value: http://otel-collector.opentelemetry.svc.cluster.local:4318/v1/logs
        - name: MANAGEMENT_OPENTELEMETRY_RESOURCEATTRIBUTES_HOSTNAME
          value: ${HOSTNAME:}
        - name: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: otel-trace-endpoint
              name: otel-config
        - name: INFO_ENV_HOSTNAME
          value: ${HOSTNAME:}
        - name: INFO_ENV_K_SERVICE
          value: ${K_SERVICE:}
        - name: INFO_ENV_K_CONFIGURATION
          value: ${K_CONFIGURATION:}
        - name: INFO_ENV_K_REVISION
          value: ${K_REVISION:}
        image: ghcr.io/making/supply-chain/blog-api-blog@sha256:f2631df3093be2612c3eb4b17b5060b9db74f4b8f78e9be6f9f00f6d69821807
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        name: workload
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
      serviceAccountName: default
